<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Be a poet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">settings</string>
    <string name="action_share">share your poem</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_main_menu">Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_new_magnet_button_description">Add a New Magnet</string>
    <string name="delete_a_magnet_button_description">delete_a_button</string>
    <string name="app_icon_description">app icon</string>
    <string name="no_saved_poems">You haven\'t saved any poems yet, but when you do they\'ll be here.</string>
    <string name="share_intent_title">Share your poem!</string>
    <string name="award_medal_image_content_description">Award Medal Image</string>
    <string name="statistics_total_saves">Total Saves:</string>
    <string name="statistics_total_updates">Total Updates:</string>
    <string name="statistics_most_words_saved_poem">Most Words in a Saved Poem:</string>
    <string name="statistics_most_words_used_at_one_time">Most Words Used at One Time:</string>
    <string name="statistics_most_packs_used_at_one_time">Most Packs Used at One Time:</string>
    <string name="statistics_magnets_deleted">Number of Magnets Deleted:</string>
    <string name="requires_an_in_app_purchase_spinner_adapter">* requires an in-app purchase</string>
    <string name="demo_drawer_opened">Excellent! Your words are separated into packs. To use a new pack, select it from the drop down list above. Select a new pack to continue.</string>
    <string name="demo_packs_selected">You can use a word by dragging it to the right. Touch and hold a word to drag it to the right and continue. </string>
    <string name="demo_magnet_tiles_changed">To see your poem better, you can scale in or out and drag the workspace around. To turn dragging on or off, tap the screen twice. Try that now, tap the screen twice, and drag your workspace.</string>
    <string name="demo_dragged">You can win awards by completing certain tasks. When you win an award, the award icon will light up. Click on the award icon to continue.</string>
    <string name="demo_award_clicked">You can delete magnets by dragging them into the trash can. Delete a magnet to continue.</string>
    <string name="demo_magnet_deleted">That\'s it! The buttons above take you to the menu, let you save your poems, help you share them with the world, and more! Start exploring. Click one of the buttons above to end this demo</string>
    <string name="open_drawer_image_description">Open the Application Drawer</string>
    <string name="overflow_button_image_resource">Overflow Button</string>
    <string name="share_button_image_content_description">Share Poem Button</string>
    <string name="save_button_image_content_description">Save Button</string>
    <string name="demo_opening_string">Welcome to Be a poet! Let\'s get started. There is a drawer on the left side of the screen that holds all of your words. You can open it by swiping from the left or by clicking the drawer button. Open the drawer to continue.\"</string>
    <string name="share_extra_text">I made a poem with Be a poet!</string>
    <string name="share_extra_sms_body">I made a poem with Be a poet!</string>
    <string name="screenshot_of_your_poem">screenshot of your poem</string>
    <string name="credits_title">Credits</string>
    <string name="credits_settings">Music:</string>
    <string name="music_credit_name">Music Credit</string>
    <string name="content_description_music_credit_link">link to the website of the music credit</string>
    <string name="credits_programmer">Programmer:</string>
    <string name="programmer_credit_name">S. Whitney Powell</string>
    <string name="link_to_my_website_content_description">link to Whitney\'s website</string>
    <string name="link_to_my_twitter_content_description">link to Whitney\'s twitter</string>
    <string name="background_for_settings_content_description">background for the settings page</string>
    <string name="go_to_the_menu_button_image_content_description">Go to the menu button</string>
    <string name="statistics_shared_poems">Poems Shared:</string>
    <string name="credits_music">Music:</string>
    <string name="credits_music_detail">\'When the Wind Blows\' Licensed under Creative Commons: By Attribution 3.0 http://creativecommons.org/licenses/by/3.0/</string>
    <string name="credits_music_credit">Kevin MacLeod (incompetech.com)</string>

    <string-array name="magnets_array">
        <item>Basic</item>
        <item>Love</item>
        <item>Science!</item>
    </string-array>

    <string name="title_activity_loading">LoadingActivity</string>
    <string name="new_deck_icon_content_description">icon for this new deck</string>
    <string name="menu_clear_the_screen">Clear the Screen</string>
    <string name="menu_save_to_sd_card">Save to SD Card</string>
    <string name="menu_toggle_screen_dragging">Toggle Screen Dragging</string>
    <string name="menu_view_the_demo">View the Demo</string>
    <string name="menu_rate_on_google_play">Rate us on Google Play</string>
    <string name="saved_poems_fragment_delete_this_poem_button_content_description">Delete this poem button</string>
    <string name="saved_poems_fragment_last_saved">Last saved:</string>
    <string name="credits_fragment_macleod_text">\'When The Wind Blows\' Kevin MacLeod (incompetech.com) Licensed under Creative Commons: By Attribution 3.0 http://creativecommons.org/licenses/by/3.0/</string>

</resources>
